--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cryptography==2.9.2
 decorator==4.4.2
 future==0.18.2
 pycparser==2.20
+python-dateutil==2.8.1
 python-telegram-bot==12.7
 PyYAML==5.3.1
 six==1.14.0
