--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ future==0.18.2
 pycparser==2.20
 python-dateutil==2.8.1
 python-telegram-bot==12.7
+pytz==2020.1
 PyYAML==5.3.1
 six==1.14.0
 tornado==6.0.4
